--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ glide = "4.16.0"
 gson_version="2.11.0"
 lifecycleViewmodelKtx = "2.8.7"
 kotlinxCoroutinesAndroid = "1.7.3"
+room_version = "2.6.1"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -43,7 +44,9 @@ androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-lived
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesAndroid" }
-
+room = {group = "androidx.room", name = "room-runtime", version.ref = "room_version"}
+room-compiler = {group="androidx.room", name = "room-compiler", version.ref ="room_version"}
+room-ktx = {group = "androidx.room", name = "room-ktx", version.ref = "room_version"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
