--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ gson_version="2.11.0"
 lifecycleViewmodelKtx = "2.8.7"
 kotlinxCoroutinesAndroid = "1.7.3"
 room_version = "2.6.1"
+navigation = "2.8.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -47,11 +48,14 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 room = {group = "androidx.room", name = "room-runtime", version.ref = "room_version"}
 room-compiler = {group="androidx.room", name = "room-compiler", version.ref ="room_version"}
 room-ktx = {group = "androidx.room", name = "room-ktx", version.ref = "room_version"}
+navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigation" }
+navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = {id = "com.google.devtools.ksp", version.ref ="ksp_version"}
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin_serialization" }
+navigation-safeargs = { id = "androidx.navigation.safeargs", version.ref = "navigation" }
 
 
