--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ glide = "4.16.0"
 gson_version="2.11.0"
 lifecycleViewmodelKtx = "2.8.7"
 kotlinxCoroutinesAndroid = "1.7.3"
+room_version = "2.6.1"
+navigation = "2.8.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -43,6 +45,11 @@ androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-lived
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesAndroid" }
+room = {group = "androidx.room", name = "room-runtime", version.ref = "room_version"}
+room-compiler = {group="androidx.room", name = "room-compiler", version.ref ="room_version"}
+room-ktx = {group = "androidx.room", name = "room-ktx", version.ref = "room_version"}
+navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigation" }
+navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigation" }
 
 
 [plugins]
@@ -50,5 +57,6 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = {id = "com.google.devtools.ksp", version.ref ="ksp_version"}
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin_serialization" }
+navigation-safeargs = { id = "androidx.navigation.safeargs", version.ref = "navigation" }
 
 
